fix error in if else statement
fix errors

--- a/Learners academy/WebContent/update_admin.html
+++ b/Learners academy/WebContent/update_admin.html
@@ -15,7 +15,7 @@ alert("once Username and password updated this will be your login cerdential Tha
 <form action="Register" method="post">
 Enter the new User Name: <input type="text" name="uname">
 <br>
-Enter the new password:  <input type="text" name = "password"><br><br>
+Enter the new password:  <input type="text" name = "password">
 <br>
 <input type ="submit" value="register"><br>
 <br>
