--- a/Learners academy/WebContent/index.html
+++ b/Learners academy/WebContent/index.html
@@ -5,19 +5,18 @@
 <title>learners Academy</title>
 </head>
 <div align="center"style="background-image: url('schoolbg1.jpg'); background-repeat: no-repeat; background-attachment: fixed;
-  background-size: 100% 100%;">
+ background-size: 100% 100%;">
 <body>
 	<h1>welcome to learners academy</h1>
 	<br>
 	<br>
-	
 		<h1>
-			<strong>Admin login page</strong>
+		<strong>Admin login page</strong>
 		</h1>
 		<br>
-		<form action="Login" method="post">
+			<form action="Login" method="post">
 			<h2>
-				User name:<input type="text" name="uname">
+			User name:<input type="text" name="uname">
 			</h2>
 			<h2>
 				Password:<input type="password" name="pass">
@@ -28,7 +27,7 @@
 </body>
 <footer>
 <div align="right">
-	<h2>DEVLOPED BY : SENTHILKUMAR</h2>
+	<h2>DEVLOPED BY : SENTHILKUMn AR</h2>
 	<h2>FullStack Java Developer</h2>
 	</div>
 </footer>
