--- a/Learners academy/WebContent/index.html
+++ b/Learners academy/WebContent/index.html
@@ -27,7 +27,7 @@
 </body>
 <footer>
 <div align="right">
-	<h2>DEVLOPED BY : SENTHILKUMn AR</h2>
+	<h2>DEVLOPED BY : SENTHILKUMAR</h2>
 	<h2>FullStack Java Developer</h2>
 	</div>
 </footer>
